# compiler

./: .gitignore  CMakeLists.txt  README.md
lib/PEGTL/: .gitignore
src/: a.out  main.cpp
src/ast/: ast.cpp  ast.h  context.h  gen_ir.cpp  symbol_table.cpp  symbol_table.h
src/common/: ops.cpp  ops.h
src/ir/: basic_block.cpp  ir.cpp  ir.h
src/parser/: ast.cpp  ast.h  parser.cpp  parser.h
src/utils/: identifier_generator.cpp  identifier_generator.h
tests/: syntax.l
